CI images update

--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-16 14:17:56
+lastsearch = 2024-07-16 21:38:36
 
 [demxanh.com]
 match = 25.9%%
@@ -90,4 +90,9 @@ url = https://dienlanhdonganh.com/dieu-hoa-panasonic-1-chieu-12000btu-cu-cs-n12w
 match = -18.5%%
 title = Chiếu điều hoà cao su non có mát không? Review chi tiết
 url = https://ru9.vn/blogs/magazine/chieu-dieu-hoa-cao-su-non-co-tot-khong
+
+[www.facebook.com]
+match = 60.0%%
+title = Chiếu Điều Hòa Cao Su Non
+url = https://www.facebook.com/groups/753270865357544/
 
