--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-16 20:50:50
+lastsearch = 2024-07-16 21:34:09
 
 [www.tui.co.uk]
 match = -250.0%%
@@ -42,8 +42,8 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -333.3%%
-title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
+match = -208.3%%
+title = TUI Fly Belgium 737 flying in North America?
 url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
 
 [www.travelgossip.co.uk]
@@ -102,9 +102,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.fitchratings.com]
-match = -308.3%%
-title = European Travel Sectors to Grow in 2024 with Varied ...
-url = https://www.fitchratings.com/research/corporate-finance/european-travel-sectors-to-grow-in-2024-with-varied-performance-18-06-2024
+match = -266.7%%
+title = EMEA Travel-Related Credits Supported by Strong ...
+url = https://www.fitchratings.com/research/corporate-finance/emea-travel-related-credits-supported-by-strong-operating-performance-mild-leverage-16-07-2024
 
 [demellierlondon.com]
 match = -133.3%%
@@ -112,9 +112,9 @@ title = All Bags | DeMellier | Shop now
 url = https://demellierlondon.com/collections/all-bags
 
 [www.telegraph.co.uk]
-match = -266.7%%
-title = Britain to be fastest growing major European economy
-url = https://www.telegraph.co.uk/business/2024/07/16/fste-100-markets-live-news-labour-economic-pledges/
+match = -350.0%%
+title = Chinese tourists fire grenades and drive tanks in Russia ' ...
+url = https://www.telegraph.co.uk/world-news/2024/07/16/chinese-tourists-fire-grenades-drive-tanks-russia-war-games/
 
 [www.oneworld.com]
 match = -283.3%%
