--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-16 18:29:47
+lastsearch = 2024-07-16 21:38:27
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Trẻ 8 tháng tuổi: Phát triển thể chất, vận động, nhận
 url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc/
 
 [www.google.com]
-match = -112.5%%
-title = maps/@21.001139,105.847882,17z?hl=vi
-url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+match = -200.0%%
+title = https://www.google.com/maps/@21.0506866,105.804746...
+url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [thongtindoingoai.caobang.gov.vn]
 match = -212.5%%
@@ -207,9 +207,9 @@ title = Mổ u tuyến giáp có bị tái phát không? Các yếu tố ảnh h
 url = https://tamanhhospital.vn/mo-u-tuyen-giap-co-bi-tai-phat-khong/
 
 [dangcongsan.vn]
-match = -193.8%%
-title = Trường đại học Lạc Hồng- điểm sáng về giáo dục ở Đồng ...
-url = https://dangcongsan.vn/giao-duc/truong-dai-hoc-lac-hong-diem-sang-ve-giao-duc-o-dong-nai-671929.html
+match = -187.5%%
+title = Trách nhiệm pháp lý khi dừng đỗ trên cao tốc gây tai nạn?
+url = https://dangcongsan.vn/ban-doc/luat-su-cua-ban/trach-nhiem-phap-ly-khi-dung-do-tren-cao-toc-gay-tai-nan-672586.html
 
 [soctrang.gov.vn]
 match = -218.8%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
+match = -218.8%%
+title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -655,4 +655,9 @@ url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
 match = -100.0%%
 title = Đài Phát thanh và Truyền hình Đắk Lắk
 url = https://drt.vn/
+
+[hawacom.vn]
+match = -187.5%%
+title = Công ty nước sạch Hà Nội | Hanoi Water Limited Company
+url = http://hawacom.vn/
 
