--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-07-16 20:52:03
+lastsearch = 2024-07-16 21:39:54
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -24,7 +24,7 @@ url = https://rv-dreams.activeboard.com/mobile.spark?p=topic&topic=43740595
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
+url = https://www.amazon.com/ask/questions/Tx14C2FLBA8H5RI/?
 
 [unofficialwarmoth.com]
 match = -10.0%%
