--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-16 20:51:21
+lastsearch = 2024-07-16 21:44:09
 
 [www.instagram.com]
 match = -30.8%%
@@ -12,9 +12,9 @@ title = Yuki Chan (@yukichan_la)
 url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = -61.5%%
-title = Illustrator - Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -84.6%%
+title = 415000+ "-yuki Chan" profiles
+url = https://www.linkedin.com/pub/dir/-yuki/Chan
 
 [www.creativeboom.com]
 match = -307.7%%
