--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-16 20:14:43
+lastsearch = 2024-07-16 21:45:17
 
 [demtot.com]
-match = 4.8%%
-title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
-url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
+match = 77.8%%
+title = Đệm lò xo Techwood
+url = https://demtot.com/dem-lo-xo-lien-ket-techwood/
 
 [tuananh.vn]
 match = 52.4%%
