--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-16 19:25:51
+lastsearch = 2024-07-16 22:14:51
 
 [www.youtube.com]
 match = -48.0%%
@@ -62,9 +62,9 @@ title = 16 người Việt bị bắt tại Đài Loan vì lừa xuyên biên gi
 url = https://vietnamnet.vn/16-nguoi-viet-bi-bat-tai-dai-loan-vi-lua-xuyen-bien-gioi-497646.html
 
 [www.facebook.com]
-match = -16.0%%
-title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
-url = https://www.facebook.com/groups/anchoidailoan/
+match = 28.0%%
+title = Ăn chơi Đài Loan | Hsinchu
+url = https://www.facebook.com/anchoidailoan/
 
 [baotintuc.vn]
 match = -72.0%%
@@ -97,8 +97,8 @@ title = Đài Bắc – Wikipedia tiếng Việt
 url = https://zh.wikipedia.org/zh-cn/vi:Đài_Bắc
 
 [cau-ca.com]
-match = -8.0%%
-title = Bảng thủy triều Su-ao Kang - CAU-CA
+match = -16.0%%
+title = Bảng thủy triều Su-ao Kang - đài loan - CAU-CA
 url = https://cau-ca.com/tw/taiwan/su-ao-kang
 
 [www.tripadvisor.com.vn]
