--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-16 18:44:52
+lastsearch = 2024-07-16 22:14:10
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Learning Hungarian on Duolingo | I was looking for a list ...
 url = https://m.facebook.com/groups/943246729103874/posts/7428405300587952/
 
 [www.instagram.com]
-match = -123.8%%
-title = Jessica Alba (@jessicaalba) • Instagram photos and videos
-url = https://www.instagram.com/jessicaalba/?hl=en
+match = -33.3%%
+title = Adam Mosseri
+url = https://www.instagram.com/mosseri/?hl=en
 
 [www.imdb.com]
 match = -23.8%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -142.9%%
 title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC-yhqBy&sig=ACfU3U0o8g7DKz8wUeFD5GpkWII_zViZxg&hl=en&sa=X&ved=2ahUKEwjxkcr9vauHAxX2D1kFHbsDBSoQ6AF6BAgXEAM
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC-zjwxx&sig=ACfU3U2Kuji-HJh_9FAvT_0FYntpQhamfw&hl=en&sa=X&ved=2ahUKEwiCtPnh7KuHAxWbD1kFHanNCywQ6AF6BAgiEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -57.1%%
-title = Announced the finalists of Nem Zagreb Awards
-url = https://www.formatbiz.it/dettNews.aspx?id=10701
+match = -114.3%%
+title = NEM, A View on CEE TV - Column by Maria Chiara Duranti ...
+url = https://www.formatbiz.it/dettNews.aspx?id=11715
 
 [yro.slashdot.org]
 match = -114.3%%
