--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-16 20:47:05
+lastsearch = 2024-07-16 22:11:04
 
 [ninhouse.vn]
-match = -161.5%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+match = -146.2%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [www.lamido.vn]
 match = 46.2%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -184.6%%
-title = vỏ ruột gối ôm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/ 
+match = -153.8%%
+title = vỏ gối kê cổ giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
 
 [songhong.info]
 match = -161.5%%
@@ -130,4 +130,9 @@ url = https://nemkimtrang.com/vo-goi-nam-lien-a-nhieu-kich-thuoc-100-chinh-hang
 match = -123.1%%
 title = Vỏ Gối Nằm Lụa Tencel 60s Trơn Màu Nâu Gỗ
 url = https://spacet.vn/shop/vo-goi-nam-lua-tencel-60s-tron-mau-nau-go-7596
+
+[mail.google.com]
+match = -30.8%%
+title = Mail - Gmail - Google
+url = https://mail.google.com/mail/u/0/?ogbl
 
