CI images update

--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-16 22:13:28
+lastsearch = 2024-07-16 22:26:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -102,9 +102,9 @@ title =
 url = https://www.dol.gov/agencies/ofccp/debarred-list
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Debarment
+match = -17.6%%
+title = Soviet–Afghan War
+url = https://en.wikipedia.org/wiki/Soviet–Afghan_War
 
 [www.johnknoop.com]
 match = 5.6%%
@@ -112,9 +112,9 @@ title = Faultlines 3-13-13
 url = http://www.johnknoop.com/Faultlines.pdf
 
 [www.worldbank.org]
-match = 0.0%%
-title = 
-url = https://www.worldbank.org/en/about/unit/sanctions-system
+match = -109.1%%
+title = World Bank Listing of Ineligible Firms and Individuals
+url = https://www.worldbank.org/en/projects-operations/procurement/debarred-firms
 
 [www.courts.ca.gov]
 match = 0.0%%
