--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-16 18:25:29
+lastsearch = 2024-07-16 22:24:33
 
 [www.lazada.vn]
 match = -166.7%%
@@ -125,4 +125,9 @@ url = https://kenghome.com/vo-goi-tua-lung-vo-goi-om-vo-goi-vuong-cho-ghe-sofa-g
 match = 73.3%%
 title = Vỏ gối vuông lông
 url = https://gagoda.vn/san-pham/chi-tiet/vo_goi_vuong_long/6918
+
+[dienmaycholon.com]
+match = -33.3%%
+title = Gối & Vỏ Gối (Có 85 sản phẩm)
+url = https://dienmaycholon.com/goi-vo-goi
 
