--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-16 15:45:19
+lastsearch = 2024-07-16 22:49:09
 
 [demxanh.com]
 match = -42.9%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--80afptqn.xn--p1ai/5392784wwwsp47euorgc4fe43y
 
 [www.lebguide.com]
-match = -32.1%%
-title = David sylvian height [PtU3HD] - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1axcfdv.xn--p1ai/25681974moyanwxcomv4fe36a
+match = -35.7%%
+title = Ksk pf cw online banking [Jpd2fN] - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--80aeitfdifeapg.xn--p1ai/93842156tovarovdomcomv4fe36a
 
 [news.google.it]
 match = -3.6%%
@@ -187,9 +187,9 @@ title = Zxrdalqimredfe99 [LB2ged]
 url = https://www.signaturetravelnetwork.com/deals/shell.cfm?link=https://doktora-faruha-azizovicha-med.ru/zxrdalqimredfe99.html
 
 [202.129.46.118]
-match = -3.6%%
-title = Funny bob ross moments [fLwvl7]
-url = http://202.129.46.118/ULIB6NEW//dublin.linkout.php?url=https://xn--b1aekhbwadew8in.xn--p1ai/95413876moyanwxcomv4fe36a
+match = 4.0%%
+title = Scott adsit imdb [3972yK]
+url = http://202.129.46.118/ULIB6NEW//dublin.linkout.php?url=https://xn--80aaflte4h.xn--p1ai/59621743tovarovdomcomv4fe36a
 
 [rainocup.com]
 match = -57.1%%
