--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-16 22:10:54
+lastsearch = 2024-07-16 22:46:58
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -555,4 +555,9 @@ url = https://www.instagram.com/arcansaigon/?hl=en
 match = -104.3%%
 title = Defense Intelligence Agency report, Reference Book on ...
 url = https://www.governmentattic.org/8docs/DIArbcwiw_1983-016.pdf
+
+[remywiki.com]
+match = 13.0%%
+title = SOUND VOLTEX EXCEED GEAR
+url = https://remywiki.com/AC_SDVX_EG
 
