--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-16 22:17:52
+lastsearch = 2024-07-16 22:51:52
 
 [demxanh.com]
 match = -41.2%%
@@ -17,9 +17,9 @@ title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
 url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
 
 [www.lazada.vn]
-match = -117.6%%
-title = Thảm Bali 1m2 Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-bali-1m2/
+match = -152.9%%
+title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
+url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [thegioidemviet.vn]
 match = -135.3%%
