--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-16 20:44:16
+lastsearch = 2024-07-16 22:49:43
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 0.0%%
-title = Jeffrey Bluestone, PhD
-url = https://profiles.ucsf.edu/jeffrey.bluestone
+match = 10.5%%
+title = Frederick Hecht, MD
+url = https://profiles.ucsf.edu/frederick.hecht
 
 [cityofclovis.com]
 match = -65.0%%
@@ -74,7 +74,7 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 [pubmed.ncbi.nlm.nih.gov]
 match = -180.0%%
 title = Polygenic risk modeling for prediction of epithelial ovarian ...
-url = https://pubmed.ncbi.nlm.nih.gov/35027648/
+url = https://pubmed.ncbi.nlm.nih.gov/35314806/
 
 [escholarship.org]
 match = -33.3%%
@@ -342,9 +342,9 @@ title = NTACT Evaluation Toolkit
 url = https://transitionta.org/wp-content/uploads/docs/toolkit_Evaluation.pdf
 
 [faculty.uci.edu]
-match = -115.0%%
-title = Nathan D. Wong - UC Irvine - Faculty Profile System
-url = https://faculty.uci.edu/profile/?facultyId=2414
+match = -140.0%%
+title = Nosratola D. Vaziri - UC Irvine - Faculty Profile System
+url = https://faculty.uci.edu/profile/?facultyId=2994
 
 [www.etecownersgroup.com]
 match = -115.0%%
