--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-16 22:11:04
+lastsearch = 2024-07-16 22:45:05
 
 [ninhouse.vn]
-match = -146.2%%
-title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+match = -161.5%%
+title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
 match = 46.2%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -153.8%%
-title = vỏ gối kê cổ giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
+match = -176.9%%
+title = vỏ gối màu đen giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối màu đen&urlold=3pcs-tam-boc-vua-van-voi-bo-vo-goi-mau-den-in-hinh-la-duy-nhat-co-queen-boc-bao-ve-nem-ga-boc-nem-c/1529613635908289487/3502170206813664485/ 
 
 [songhong.info]
 match = -161.5%%
