CI images update

--- a/images/nem-diamond-re-160x200x09/config.ini
+++ b/images/nem-diamond-re-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamond-re-160x200x09.html
 lastopen = 2024-06-10 12:36:25
 
 [search]
-lastsearch = 2024-07-16 20:01:54
+lastsearch = 2024-07-16 23:17:30
 
 [www.reddit.com]
 match = -60.0%%
@@ -70,4 +70,9 @@ url = https://audiokarma.org/forums/index.php?threads/nude-black-diamond-stylus-
 match = 32.0%%
 title = Swiss Diamond®️ | Cookware
 url = https://swissdiamond.com/
+
+[www.m3post.com]
+match = -72.0%%
+title = Premier Diamond Cut IR Tint Intro - BMW M3 Forum (E90 ...
+url = https://www.m3post.com/forums/showthread.php?t=302487
 
