--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-16 21:49:13
+lastsearch = 2024-07-16 23:21:31
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = Chăn ga gối Sông Hồng không chần 100%% cotton Solid
 url = https://demhong.vn/chan-ga-goi-song-hong-don-sac-khong-chan/
 
 [chandem.com.vn]
-match = 42.3%%
-title = Bộ chăn ga gối Litter Girl Ctt112
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
+match = 34.6%%
+title = Bộ chăn ga gối cao cấp Chang My P144
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-p144/
 
 [www.koala.vn]
 match = -3.8%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = -11.5%%
-title = Bộ Chăn Ga Gối Cotton Poly 4 món - Happy Bedding
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-4-món-Bộ-chăn-ga-bộ-ga-giường-drap-nệm-mền-Happy-Bedding-(Miễn-phí-bo-chun)-i.483546614.10240511269
+match = -46.2%%
+title = Bộ chăn ga gối cotton 3F phong cách khách sạn, vải mềm ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-cotton-3F-phong-cách-khách-sạn-vải-mềm-đẹp-không-xù-lông-i.401385750.8385068624
 
 [bedding.vn]
 match = -42.3%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối cao cấp mã UC22-018
 url = https://songhong.info/chan-ga-goi-uc018
 
 [thegioichanra.com]
-match = 38.5%%
-title = Bộ Chăn Ga Gối Tencel Edena Love 22
-url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-tencel-edena-love-22/
+match = 53.8%%
+title = Bộ Chăn Ga Gối Solid Edena 374
+url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-solid-edena-374/
 
 [demxanh.com]
 match = -3.8%%
