--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-16 22:11:52
+lastsearch = 2024-07-16 23:19:53
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Happiness Việt Nam
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = 42.9%%
-title = Bộ ga gối thun 3D hàn quốc Chó Happy
-url = https://shopee.vn/Bộ-ga-gối-thun-3D-hàn-quốc-Chó-Happy-i.25746013.18261378023
+match = -21.4%%
+title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
 match = 17.9%%
@@ -27,9 +27,9 @@ title = Bộ chăn ga gối Happy Wedding Solid 84
 url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 
 [demxanh.com]
-match = 0.0%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
+match = 14.3%%
+title = Bộ ga gối chun chần xơ đậu nành mã 16 Lá tre voi
+url = https://demxanh.com/bo-ga-goi-chun-chan-xo-dau-nanh-ma-16-la-tre-voi.html
 
 [thegioinem.com]
 match = 17.9%%
