--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-16 17:29:28
+lastsearch = 2024-07-16 23:15:04
 
 [tiki.vn]
 match = -138.9%%
@@ -18,8 +18,8 @@ url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
 match = -188.9%%
-title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
+title = Everon ESM-21013 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esm21013.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -43,8 +43,8 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
 match = -61.1%%
-title = Bộ ga phủ Common C119 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c119
+title = Bộ ga phủ Melody M214 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-melody-m214
 
 [aeoneshop.com]
 match = -105.6%%
@@ -72,9 +72,9 @@ title = Bộ drap phủ Everon RORBOT (160x200) Giá: 4.027.000 VNĐ
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-everon-rorbot-160x200-gia-4-027-000-vnd-sp202152.html
 
 [antbedding.com]
-match = -38.9%%
-title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
-url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
+match = 33.3%%
+title = Bộ Chăn Ga Gối Eu07
+url = https://antbedding.com/bo-chan-ga-goi-eu07
 
 [www.mym.com.vn]
 match = -57.1%%
@@ -140,4 +140,9 @@ url = https://www.facebook.com/fitin.vn/
 match = -38.9%%
 title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
+
+[dovihome.vn]
+match = 6.7%%
+title = Giường gỗ DV-20
+url = https://dovihome.vn/giuong-go-dv-20
 
