--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-16 21:19:00
+lastsearch = 2024-07-16 23:18:48
 
 [chieutruc.info]
 match = -73.9%%
@@ -47,9 +47,9 @@ title = Chiếu trúc cao bằng ở tại Hà Tĩnh
 url = https://hanggiadunghatinh.com/?x=76/san-pham/chieu-truc-cao-bang
 
 [www.facebook.com]
-match = 21.7%%
-title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieutruccaobangcbg/
+match = 47.8%%
+title = Chiếu trúc 688 Cao Bằng
+url = https://www.facebook.com/0968736622Chieutruc688CaoBang/
 
 [chieu.com.vn]
 match = 52.6%%
@@ -125,4 +125,9 @@ url = https://olm.vn/cau-hoi/mot-thua-ruong-hinh-binh-hanh-co-so-do-canh-day-120
 match = -13.0%%
 title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
+
+[thegioidemtot.vn]
+match = 56.5%%
+title = Chiếu trúc Cao Bằng 1m8x2m
+url = https://thegioidemtot.vn/dt17840-chie-u-tru-c-cao-ba-ng-1m8x2m.html
 
