--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-16 21:49:59
+lastsearch = 2024-07-16 23:15:15
 
 [www.youtube.com]
 match = -420.0%%
@@ -18,8 +18,8 @@ url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
 match = -70.0%%
-title = 14 days with you ren
-url = https://www.tumblr.com/tagged/14 days with you ren
+title = ren 14 days with you
+url = https://www.tumblr.com/tagged/ren 14 days with you
 
 [www.garagejournal.com]
 match = -200.0%%
