--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-16 16:44:06
+lastsearch = 2024-07-16 23:21:51
 
 [www.amazon.com]
-match = -100.0%%
-title = Ghe da yeu thuong - Hugo Luân
-url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
+match = -309.1%%
+title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
+url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
 
 [chungauto.vn]
 match = -209.1%%
@@ -47,9 +47,9 @@ title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
 url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
-match = -109.1%%
-title = 50+ Mẫu Bọc Ghế Da Xe Camry Đẹp
-url = https://bocghedaoto.net/boc-ghe-da-xe-camry
+match = -181.8%%
+title = Bọc ghế da ô tô chất lượng cao Tại Nhà
+url = https://bocghedaoto.net/boc-ghe-da-oto-tai-nha
 
 [ghedagiago.com]
 match = -290.9%%
