CI images update

--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-16 15:40:49
+lastsearch = 2024-07-17 00:33:26
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
-url = https://www.tuigroup.com/en-en
+match = -250.0%%
+title = TUI brand name may no longer be used by TUI Russia
+url = https://www.tuigroup.com/en-en/media/press-releases/2022/2022-03-10-tui-terminates-agreement
 
 [www.tui.nl]
 match = -316.7%%
@@ -52,9 +52,9 @@ title = Tui Motu InterIslands Magazine
 url = https://tuimotu.org/
 
 [github.com]
-match = -22.2%%
-title = README.md
-url = https://github.com/nhn/tui.calendar/blob/main/docs/README.md
+match = -241.7%%
+title = code table of south korea map · nhn/tui.chart Wiki
+url = https://github.com/nhn/tui.chart/wiki/code-table-of-south-korea-map
 
 [www.bairdmaritime.com]
 match = -250.0%%
@@ -107,9 +107,9 @@ title = Tag: TUI Group
 url = https://www.ttgasia.com/tag/tui-group/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = 36.4%%
+title = tui sitemap
+url = https://www.tui.co.uk/sitemap
 
 [maritime-executive.com]
 match = -316.7%%
