--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-16 23:53:33
+lastsearch = 2024-07-17 00:36:28
 
 [demxanh.com]
-match = 13.8%%
-title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
+match = 44.8%%
+title = Bộ chăn ga gối gấu Teddy màu kem
+url = https://demxanh.com/bo-chan-ga-goi-gau-teddy-mau-kem.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -32,14 +32,14 @@ title = chăn ga pyeoda giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chăn ga pyeoda
 
 [thegioidemonline.com]
-match = 34.5%%
-title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
-url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
+match = -6.9%%
+title = Bộ chăn ga gối cotton Basic (chăn hè) màu xanh lá
+url = https://thegioidemonline.com/bo-chan-ga-goi-cotton-basic-chan-he-mau-xanh-la.html
 
 [dem4mua.vn]
-match = 31.8%%
-title = Bộ chăn ga - Đệm 4 Mùa
-url = https://dem4mua.vn/danh-muc-san-pham/bo-chan-ga-goi/bo-chan-ga/
+match = 6.9%%
+title = Bộ ga lụa phủ Skysilk PYEODA - Đệm 4 Mùa
+url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 
 [www.diepxuan.com]
 match = 65.5%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Bộ chăn ga gấm Pyeoda SkySilk
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 
 [www.facebook.com]
-match = 28.0%%
-title = Chăn Ga Gối Đệm Singapore
-url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
+match = -27.8%%
+title = Đệm Xanh Bắc Giang
+url = https://www.facebook.com/demxanh.308bacgiang/?locale=nl_BE
 
 [changagoidemdep.vn]
 match = 3.4%%
