--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-16 22:51:06
+lastsearch = 2024-07-17 00:29:33
 
 [www.facebook.com]
 match = -141.2%%
@@ -147,9 +147,9 @@ title = Seeing the unseen of Chinese herbal medicine processing ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
-match = -217.6%%
-title = Mao's Crusade: Politics and Policy Implementation in China's ...
-url = https://books.google.com/books?id=9pPxwn6EvR4C&pg=PA127&lpg=PA127&dq=chan+4+kg+mao+tan&source=bl&ots=XSXHQxjebi&sig=ACfU3U1sXRRe1qEQZElEf1zuiYi301tT7A&hl=en&sa=X&ved=2ahUKEwjR9ZaD0quHAxV5L9AFHReJDPsQ6AF6BAguEAM
+match = -194.1%%
+title = Actinobacteria: Prolific Producers of Bioactive Metabolites
+url = https://books.google.com/books?id=R6YEEAAAQBAJ&pg=PA60&lpg=PA60&dq=chan+4+kg+mao+tan&source=bl&ots=V9Hg3QJlpm&sig=ACfU3U2eTnGNbO13eh4OhwcMOK-_xY39Gg&hl=en&sa=X&ved=2ahUKEwiz5KCDi6yHAxW9mokEHeBiDHgQ6AF6BAglEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
