--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-16 23:18:48
+lastsearch = 2024-07-17 00:29:56
 
 [chieutruc.info]
 match = -73.9%%
@@ -47,9 +47,9 @@ title = Chiếu trúc cao bằng ở tại Hà Tĩnh
 url = https://hanggiadunghatinh.com/?x=76/san-pham/chieu-truc-cao-bang
 
 [www.facebook.com]
-match = 47.8%%
-title = Chiếu trúc 688 Cao Bằng
-url = https://www.facebook.com/0968736622Chieutruc688CaoBang/
+match = 21.7%%
+title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieutruccaobangcbg/
 
 [chieu.com.vn]
 match = 52.6%%
