--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-16 13:40:57
+lastsearch = 2024-07-17 00:35:34
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -94,7 +94,7 @@ url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 [books.google.com]
 match = -187.5%%
 title = 10 Điều Tạo Nên Số Phận - Page 46 - Google Books Result
-url = https://books.google.com/books?id=gnsEEAAAQBAJ&pg=PA46&lpg=PA46&dq=chieu+lac+soc+10&source=bl&ots=2XqgQwx9P3&sig=ACfU3U2wQ8SHyD1a7pNqBKt-_7PDyfh-Jw&hl=en&sa=X&ved=2ahUKEwiz2fr9iKqHAxXxAHkGHaXlAn4Q6AF6BAggEAM
+url = https://books.google.com/books?id=gnsEEAAAQBAJ&pg=PA46&lpg=PA46&dq=chieu+lac+soc+10&source=bl&ots=2XqgRtx5S1&sig=ACfU3U2Wx9h-KQr6nuSFu6JGH-z33sv-sQ&hl=en&sa=X&ved=2ahUKEwjQ5Z6vjKyHAxX5rYkEHXNbD30Q6AF6BAgfEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
