--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-07-17 00:11:45
+lastsearch = 2024-07-17 00:28:45
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [shopee.vn]
-match = -15.2%%
-title = Chiếu trúc cao bằng - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/cao bằng
+match = -3.0%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [vongxepsaigon.vn]
 match = 27.3%%
@@ -72,9 +72,9 @@ title = Chiếu trúc đen không viền 1m6x2m [Được kiểm hàng ...
 url = https://www.sendo.vn/chieu-truc-den-khong-vien-1m6x2m-duo-c-kie-m-ha-ng-31981016-116709018.html
 
 [www.toangiaphuc.vn]
-match = 58.1%%
-title = Chiếu trúc hạt nâu viền vải 1m8
-url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m8.html
+match = 54.8%%
+title = Chiếu trúc hạt nâu viền vải 1m6
+url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m6.html
 
 [developers.cloudflare.com]
 match = 6.5%%
