--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-17 00:16:01
+lastsearch = 2024-07-17 00:36:08
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
 url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
 
 [shopee.vn]
-match = 16.1%%
-title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc
+match = 0.0%%
+title = chiếu trúc cao cấp giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc cao cấp
 
 [tiki.vn]
 match = -6.5%%
@@ -47,9 +47,9 @@ title = Chiếu trúc quế lâm loại 1 16 20
 url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 
 [www.facebook.com]
-match = 19.0%%
-title = Chiếu trúc giá rẻ HCM
-url = https://www.facebook.com/groups/chieutrucviet/
+match = -31.6%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [www.dienmayxanh.com]
 match = -29.0%%
