--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-16 18:24:23
+lastsearch = 2024-07-17 00:35:09
 
 [quizlet.com]
 match = -170.0%%
@@ -47,14 +47,14 @@ title = Loom + Forge Ren 16-pc. Stoneware Dinnerware Set
 url = https://www.jcpenney.com/p/loom-forge-ren-16-pc-stoneware-dinnerware-set/ppr5008057935?pTmplType=regular
 
 [en.wikipedia.org]
-match = -120.0%%
-title = List of acupuncture points
-url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjJMlo9&sig=ACfU3U04aFoLYcou26rIEkvlJ1pjDUzDZQ&hl=en&sa=X&ved=2ahUKEwjI19ezuauHAxUqL1kFHXdcCiwQ6AF6BAgYEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjMEoie&sig=ACfU3U2Y1H1xfcMMbQLXXnCeMEMcoBf3Mw&hl=en&sa=X&ved=2ahUKEwjDlamjjKyHAxXsrYkEHbU5D3wQ6AF6BAhAEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -240,4 +240,9 @@ url = https://www.theepochtimes.com/article/mysterious-chinese-characters-ren-co
 match = 0.0%%
 title = 
 url = https://www.acufinder.com/Acupuncture+Points/Ren+16+(CO+16)/337
+
+[mendacupuncture.com]
+match = 16.7%%
+title = Ren 17
+url = https://mendacupuncture.com/ren-17/
 
