CI images update

--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-17 00:11:56
+lastsearch = 2024-07-17 00:49:01
 
 [everon.online]
 match = -7.4%%
@@ -57,9 +57,9 @@ title = Bộ ga nhung bọc chun hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=bộ ga nhung bọc chun
 
 [www.fountainpennetwork.com]
-match = -18.5%%
-title = Modern Pens With Ebonite Feeds - Page 2
-url = https://www.fountainpennetwork.com/forum/topic/334946-modern-pens-with-ebonite-feeds/page/2/
+match = -33.3%%
+title = Scribo Feel - Page 7 - Fountain Pen Reviews
+url = https://www.fountainpennetwork.com/forum/topic/342431-scribo-feel/page/7/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -70,4 +70,24 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 match = 11.1%%
 title = Nissin Zerosum Tenkara Rods
 url = https://www.tenkarabum.com/nissin-zerosum-tenkara-rods.html
+
+[www.amazon.com]
+match = -22.2%%
+title = Amazon.com: Customer Questions & Answers
+url = https://www.amazon.com/ask/questions/Tx3J2AV7F6IB10T/
+
+[tetontenkara.blogspot.com]
+match = 3.7%%
+title = Nissin Zerosum 450 6:4 -- review
+url = http://tetontenkara.blogspot.com/2015/10/nissin-zerosum-450-64-review.html
+
+[us.amazon.com]
+match = -76.9%%
+title = I wanted to..
+url = https://us.amazon.com/gp/aw/review/B004R0OYFG/R1MR5RXBLIAI91
+
+[forums.dansdeals.com]
+match = -22.2%%
+title = Bosch Universal Plus Stand Mixer - Black
+url = https://forums.dansdeals.com/index.php?topic=110702.0
 
