--- a/images/nem-diamold-re-200x220x09/config.ini
+++ b/images/nem-diamold-re-200x220x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-diamold-re-200x220x09.html
 lastopen = 2024-06-10 11:11:36
 
 [search]
-lastsearch = 2024-07-16 21:17:12
+lastsearch = 2024-07-17 00:47:20
 
 [www.youtube.com]
-match = -80.0%%
-title = Diamond D3000N Super Discone Ultra-Wideband Antenna ...
-url = https://www.youtube.com/watch?v=1ybheoXRNYU
+match = -88.0%%
+title = Diamond Selector II 2 Diamond tester testing review with ...
+url = https://www.youtube.com/watch?v=xuh30I17co8
 
 [www.diamonds.pro]
 match = 0.0%%
