--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-17 00:18:01
+lastsearch = 2024-07-17 00:53:09
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -54.2%%
-title = Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt Freeship
-url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
+match = -33.3%%
+title = Những Bộ Chăn Ga Gối Đệm Cao Cấp Sang Trọng Quý Phái
+url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dem-cao-cap/
 
 [tiki.vn]
 match = 0.0%%
@@ -142,7 +142,7 @@ title = Bộ Chăn Ga Gối cotton Phối Màu Giá Rẻ giá sỉ, giá bán bu
 url = https://thitruongsi.com/bo-chan-ga-goi-cotton-phoi-mau-gia-re-1713025.html
 
 [goni.vn]
-match = -62.5%%
-title = Bộ Chăn Ga Gối Trẻ Trung, Mềm Mịn, Mát Mẻ - Ưu đãi tháng 07
-url = https://goni.vn/chan-ga-goi/
+match = 4.2%%
+title = Bộ chăn mền ga gối Goni tici màu đỏ mận xám
+url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-do-man-xam/
 
