--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-16 23:49:44
+lastsearch = 2024-07-17 00:46:57
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = 22.2%%
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
+url = https://changagoidemsonghong.com/chan-ga-goi-bc63
 
 [demhong.vn]
 match = 11.1%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -11.1%%
-title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
+match = -29.6%%
+title = Chăn Ga Gối - Cao Cấp - Đạt chuẩn chất lượng Châu Âu
+url = https://elmichsleep.vn/chan-ga-goi
 
 [khodemgiagoc.com]
 match = -37.0%%
@@ -165,4 +165,9 @@ url = https://khodemgiagoc.com/bo-cotton-living
 match = 7.4%%
 title = Bộ chăn ga gối cao cấp Sông Hồng Urban UC24-102
 url = https://changagoidemphuongbac.com/bo-chan-ga-goi-cao-cap-song-hong-urban-uc24-102/
+
+[lizd.vn]
+match = 16.7%%
+title = LIZD™ chăn ga gối đệm
+url = http://lizd.vn/index.php?route=product/manufacturer/info&manufacturer_id=10
 
