--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-17 00:17:49
+lastsearch = 2024-07-17 00:46:25
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -52,9 +52,9 @@ title = Chiếc két sắt bí ẩn trong căn nhà kẻ nghiện
 url = https://baomoi.com/chiec-ket-sat-bi-an-trong-can-nha-ke-nghien-c49635757.epi
 
 [tuyensinh247.com]
-match = -200.0%%
-title = Con lắc đơn gồm sợi dây có chiều dài 1,63 m và quả cầu ...
-url = https://tuyensinh247.com/bai-tap-618536.html
+match = -218.8%%
+title = Một con lắc đơn có khối lượng vật là m = 200g, chiều dài l ...
+url = https://tuyensinh247.com/bai-tap-62399.html
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -68.8%%
-title = Peri Pool Arena Hà Nội added a...
-url = https://m.facebook.com/100094275258198/photos/340178325801340/
+match = -175.0%%
+title = NA99 - Nơi Hội Tụ Các Đại Gia | 𝐄𝐦 𝐭𝐡𝐚̂́𝐲 𝐠𝐢̀ 𝐤𝐡𝐢 𝐛𝐮𝐨̂̉𝐢 ...
+url = https://m.facebook.com/groups/dola88.official/posts/1440155476634990/
 
 [www.sjcallahabad.org]
 match = -212.5%%
@@ -387,9 +387,9 @@ title = Nghĩa trang tổ chức chiếu phim phục vụ gần 3.000 khán ...
 url = https://vietnamnet.vn/nghia-trang-to-chuc-chieu-phim-phuc-vu-gan-3-000-khan-gia-coi-am-2298953.html
 
 [moon.vn]
-match = -225.0%%
-title = Trong một khoảng thời gian, một con lắc thực hiện được 15 ...
-url = https://moon.vn/hoi-dap/trong-mot-khoang-thoi-gian-mot-con-lac-thuc-hien-duoc-15-dao-dong-giam-chieu-dai-cua-16786
+match = -193.8%%
+title = Một con lắc đơn gồm quả cầu nhỏ có khối lượng m treo ...
+url = https://moon.vn/hoi-dap/mot-con-lac-don-gom-qua-cau-nho-co-khoi-luong-m-treo-vao-soi-day-co-chieu-dai-l-40-c-331910
 
 [baolaocai.vn]
 match = -112.5%%
@@ -487,9 +487,9 @@ title = 16ga.com ~ View topic - Drams Equivalent Chart for 16 ...
 url = http://www.16ga.com/forum/viewtopic.php?t=23452&sid=30667485ac752ac966400128685870ee
 
 [www.quora.com]
-match = -106.2%%
-title = What are some swear words in Vietnamese?
-url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
+match = -137.5%%
+title = Are Vietnamese people and Thai people related?
+url = https://www.quora.com/Are-Vietnamese-people-and-Thai-people-related
 
 [vn.investing.com]
 match = -212.5%%
@@ -500,4 +500,24 @@ url = https://vn.investing.com/news/stock-market-news/phan-tich-ky-thuat-phien-c
 match = -225.0%%
 title = Tai nạn giao thông mới nhất 16/7/2024: lọt gầm xe, cụ ông ...
 url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-16-7-2024-lot-gam-xe-cu-ong-82-tuoi-tu-vong.html
+
+[www.trip.com]
+match = -112.5%%
+title = 10 Top Attractions in Luong Hoa Lac (2024)
+url = https://www.trip.com/travel-guide/attraction/luong-hoa-lac-1589513/tourist-attractions/type-all-of-exhibition-centers-70-129/
+
+[sovhtt.caobang.gov.vn]
+match = -237.5%%
+title = Báo cáo về việc điều chỉnh cục bộ Đồ án điều chỉnh Quy hoạch ...
+url = https://sovhtt.caobang.gov.vn/Default.aspx?sid=1355&pageid=34288&catid=94914&id=858488&catname=quy-hoach-phuong-xa&title=bao-cao-ve-viec-dieu-chinh-cuc-bo-do-an-dieu-chinh-quy-hoach-chung-thi-tran-pac-miau-huyen-bao-l
+
+[tanhkhong.org]
+match = -200.0%%
+title = Triệt Như - Tiếng Hát Giữa Trời - BÀI 57 SUY GẪM TỪ CÂY ...
+url = https://tanhkhong.org/p105a4256/10/triet-nhu-tieng-hat-giua-troi-bai-57-suy-gam-tu-cay-bo-de-bonsai
+
+[bvchuyenkhoasannhist.com.vn]
+match = -6.2%%
+title = bóng đá v league 2022
+url = https://bvchuyenkhoasannhist.com.vn/muv/giai-phap-bong-da.html
 
