--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-16 22:26:22
+lastsearch = 2024-07-17 00:51:16
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,13 +12,13 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -76.2%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
-match = 14.3%%
-title = Chiếu Trúc Thái Lan Giá Tốt T07/2024
+match = -81.0%%
+title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
