--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-17 00:12:29
+lastsearch = 2024-07-17 00:48:15
 
 [changagoidemtamhao.com]
 match = -5.0%%
-title = Bộ Chăn Ga Gối PYEODA LSP
-url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-lsp
+title = Bộ Chăn Ga Gối PYEODA LTT
+url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
 
 [demsingapore.com]
 match = -70.0%%
