--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-16 19:29:33
+lastsearch = 2024-07-17 00:46:03
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = Thùy Ngân (@huuloc861) • Instagram photos and videos
 url = https://www.instagram.com/huuloc861/
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -127.8%%
-title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
-url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
+match = -150.0%%
+title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
+url = https://www.facebook.com/sieuthinem267/
 
 [voz.vn]
 match = 11.1%%
@@ -82,9 +82,9 @@ title = NEM NƯỚNG | Fast Food
 url = https://www.ministop.vn/en/product/detail?id=934
 
 [www.youtube.com]
-match = -144.4%%
-title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
-url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
+match = -155.6%%
+title = Tipps and Tricks - How to make CHA GIO - Authentic ...
+url = https://www.youtube.com/watch?v=YdTLFfXiGMk
 
 [www.tiktok.com]
 match = -133.3%%
