CI images update

--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-16 19:25:08
+lastsearch = 2024-07-17 01:17:55
 
 [shopee.vn]
-match = 39.3%%
-title = Chiếu Điều Hòa Lụa Thông Khí Mát Rượi ...
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Thông-Khí-Mát-Rượi-Chiếu-Điều-Hòa-Sợi-Mây-Cao-Cấp-loại-đep-.-i.594187438.16425215901
+match = 14.3%%
+title = CHIẾU ĐIỀU HÒA SỢI MẤY LÓT LỤA CAO CẤP HÀNG ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-SỢI-MẤY-LÓT-LỤA-CAO-CẤP-HÀNG-LOẠI-1-i.914808892.24557268713
 
 [chieutrelanlan.com]
 match = 19.0%%
