--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-17 00:51:04
+lastsearch = 2024-07-17 01:23:40
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -77,9 +77,9 @@ title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
 url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [www.youtube.com]
-match = -14.3%%
-title = Bài ca bốn mùa | Chun Chin | Nhạc thiếu nhi vui nhộn
-url = https://www.youtube.com/watch?v=KEP4EdvSrP8
+match = -57.1%%
+title = Bài ca bốn mùa | Liên khúc nhạc thiếu nhi hay nhất | Chun Chin
+url = https://www.youtube.com/watch?v=IAxENR2TG3k
 
 [demolympia.com]
 match = -10.7%%
