--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-17 00:36:28
+lastsearch = 2024-07-17 01:21:00
 
 [demxanh.com]
-match = 44.8%%
-title = Bộ chăn ga gối gấu Teddy màu kem
-url = https://demxanh.com/bo-chan-ga-goi-gau-teddy-mau-kem.html
+match = 13.8%%
+title = Chăn ga gối Singapore Pyeoda Luxury 5 món
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -32,9 +32,9 @@ title = chăn ga pyeoda giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chăn ga pyeoda
 
 [thegioidemonline.com]
-match = -6.9%%
-title = Bộ chăn ga gối cotton Basic (chăn hè) màu xanh lá
-url = https://thegioidemonline.com/bo-chan-ga-goi-cotton-basic-chan-he-mau-xanh-la.html
+match = 34.5%%
+title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
+url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
 
 [dem4mua.vn]
 match = 6.9%%
