--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-17 00:46:57
+lastsearch = 2024-07-17 01:20:00
 
 [changagoidemsonghong.com]
-match = 22.2%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
-url = https://changagoidemsonghong.com/chan-ga-goi-bc63
+match = 33.3%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
+url = https://changagoidemsonghong.com/chan-ga-goi-bc66
 
 [demhong.vn]
 match = 11.1%%
@@ -117,8 +117,8 @@ title = Cotton S (CTS) - Koala
 url = https://koala.vn/chan-ga-goi/koala-cts
 
 [cuahangchangagoidem.com]
-match = -25.9%%
-title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
+match = -40.7%%
+title = Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt Freeship
 url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [spacet.vn]
