--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-16 23:22:16
+lastsearch = 2024-07-17 01:25:44
 
 [www.instagram.com]
 match = -30.8%%
@@ -12,9 +12,9 @@ title = Yuki Chan (@yukichan_la)
 url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = -192.3%%
-title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
-url = https://www.linkedin.com/in/hoi-ki-chan-519219147
+match = -61.5%%
+title = Illustrator - Hoi Chan Studio
+url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -11.1%%
-title = Yui Horie
-url = https://en.wikipedia.org/wiki/Yui_Horie
+match = -15.4%%
+title = The Midnight After
+url = https://en.wikipedia.org/wiki/The_Midnight_After
 
 [nursing.hku.hk]
 match = -161.5%%
