--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-17 00:13:22
+lastsearch = 2024-07-17 01:24:25
 
 [vinatools.com]
 match = -140.0%%
@@ -49,7 +49,7 @@ url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 [www.facebook.com]
 match = 0.0%%
 title = Black Kingdom - D2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=ml_IN
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=hi_IN
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -235,4 +235,9 @@ url = https://www.cordeck.com/wp-content/uploads/2021/12/2021-BXUV.D216-_-UL-Pro
 match = 33.3%%
 title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
+
+[www.axel-gl.com]
+match = -260.0%%
+title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông qua lỗ ...
+url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
