--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-16 22:12:46
+lastsearch = 2024-07-17 01:19:02
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -157,9 +157,9 @@ title = số đỏ casino xs 24|Casino Online Châu Á
 url = https://sinhvien.mit.vn/số-đỏ-casino-xs-24.phtm
 
 [www.facebook.com]
-match = 7.1%%
-title = Cuối Giờ Chiều
-url = https://www.facebook.com/cuoigiochieu/
+match = -218.8%%
+title = Không nhận ra Hoon oppa của Quyên: thon gọn hơn, nết ăn ...
+url = https://www.facebook.com/YanFoods/videos/2024-july-không-nhận-ra-hoon-oppa-của-quyên-thon-gọn-hơn-nết-ăn-cũng-từ-tốn-hơn/1166878684534764/
 
 [www.bthh.org.vn]
 match = -68.8%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -206.2%%
-title = YÊU BẾP✅ (Esheep Kitchen family) | Bạn bè nói “Linh đi ...
-url = https://m.facebook.com/groups/groupyeubep/posts/2266918167025659/
+match = -6.2%%
+title = Peri Pool Arena Hà Nội
+url = https://m.facebook.com/100094275258198/photos/341156062370233/
 
 [baomoi.com]
 match = -193.8%%
