--- a/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-150x200x10-felix.html
 lastopen = 2024-06-07 00:14:57
 
 [search]
-lastsearch = 2024-07-17 00:33:57
+lastsearch = 2024-07-17 01:21:24
 
 [thefelix.vn]
 match = -50.0%%
@@ -105,4 +105,9 @@ url = https://congtynemthangloi.com.vn/nem-cao-su-thien-nhien-100-thang-loi-dem-
 match = 57.1%%
 title = NỆM CAO SU THIÊN NHIÊN FELIX
 url = https://bsamedia.vn/nem-cao-su-thien-nhien-felix/
+
+[noithatnhatbao.com]
+match = 34.2%%
+title = Nệm cao su thiên nhiên - Chăn ra gối nệm Nhật Bảo
+url = https://noithatnhatbao.com/product-category/nem-cao-su-thien-nhien-pleiku-gia-lai/
 
