--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-16 21:35:24
+lastsearch = 2024-07-17 01:18:41
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -12,9 +12,9 @@ title = Thảm giường nỉ 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -110,4 +110,9 @@ url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
 match = 28.6%%
 title = Thảm Bohemian xanh đỏ
 url = https://covacu.com/tham-trai-giuong-bohemian-xanh-do
+
+[thegioidemonline.vn]
+match = -109.1%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
