--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-16 21:13:36
+lastsearch = 2024-07-17 01:48:39
 
 [tiki.vn]
 match = -47.6%%
@@ -12,14 +12,14 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -52.4%%
-title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
-url = https://www.facebook.com/groups/anchoidailoan/
+match = -104.8%%
+title = CGV Cinemas Vietnam - Sau 4 ngày công chiếu tại Đài ...
+url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
 
 [www.roc-taiwan.org]
-match = -19.0%%
-title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
-url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
+match = -42.9%%
+title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
+url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
 match = -19.0%%
