--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-16 21:38:27
+lastsearch = 2024-07-17 01:45:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
 
 [baohungyen.vn]
 match = -200.0%%
