--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-17 00:49:33
+lastsearch = 2024-07-17 01:49:59
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
 
 [shopee.vn]
-match = 3.6%%
-title = CHIẾU NHỰA ĂN CƠM 4M chiếu nhựa 2 mâm siêu đẹp
-url = https://shopee.vn/CHIẾU-NHỰA-ĂN-CƠM-4M-chiếu-nhựa-2-mâm-siêu-đẹp-TTTM-Tuấn-Bình-i.292600121.12379642366
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
+url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
 
 [tiki.vn]
 match = -21.4%%
