--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-16 20:19:39
+lastsearch = 2024-07-17 01:44:49
 
 [demxanh.com]
 match = -135.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt đen 1.2x1.9m
 url = https://demre.com.vn/chieu-truc-hat-den-1-2x1-9m
 
 [shopee.vn]
-match = -105.9%%
-title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
+match = -135.3%%
+title = Chiếu Trúc hạt hồ lô đen Không Viền mắt nhỏ cao cấp ...
+url = https://shopee.vn/Chiếu-Trúc-hạt-hồ-lô-đen-Không-Viền-mắt-nhỏ-cao-cấp-thoáng-mát-BH-1-năm-(Ảnh-Thật)-i.8398725.5342652017
 
 [changagoidemdep.vn]
 match = 0.0%%
@@ -48,8 +48,8 @@ url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
 
 [chieutrelanlan.com]
 match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+title = Chiếu trúc mắt nhỏ có viền màu đen 120x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-120x190cm-35.html
 
 [chieu.com.vn]
 match = 41.2%%
