--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-17 00:52:26
+lastsearch = 2024-07-17 01:44:17
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,13 +22,13 @@ title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
 url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
-match = -85.7%%
-title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
+match = 9.5%%
+title = Chiếu Trúc Thái Lan Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [chieutruc.info]
