--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-17 01:45:43
+lastsearch = 2024-07-17 02:16:03
 
 [www.bible.com]
-match = -128.6%%
-title = MARKA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
+match = -135.7%%
+title = JOHANA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -107.1%%
+title = MÙNG CHỤP ĐỈNH CHÓP HOÀNG PHÁT 1M6 x 2M
+url = https://munghoangphat.com/mung-chup-dinh-chop-hoang-phat-1m6-x-2m.html
 
 [manthutrang.com]
 match = -207.1%%
@@ -68,8 +68,8 @@ url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.churchofjesuschrist.org]
 match = -35.7%%
-title = Doktrin na ol Kavanen 22
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/22?lang=tpi
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [www.youtube.com]
 match = 28.6%%
@@ -82,9 +82,9 @@ title = Gisele Bündchen (@gisele) • Instagram photos and videos
 url = https://www.instagram.com/gisele/?hl=en
 
 [en.wikipedia.org]
-match = -66.7%%
-title = Anggun
-url = https://en.wikipedia.org/wiki/Anggun
+match = 10.0%%
+title = Bánh chưng
+url = https://en.wikipedia.org/wiki/Bánh_chưng
 
 [mail.storyfb.com]
 match = 35.7%%
@@ -145,4 +145,9 @@ url = https://dipr.mizoram.gov.in/post/minister-pi-lalrinpuiin-mizo-lal-huaisen-
 match = -135.7%%
 title = Holy Bible (Mizo) | TIRHKOHTE THILTIH
 url = https://www.facebook.com/groups/MizoHolyBible/posts/tirhkohte-thiltihtirhkohte-thiltih-bu-bung-1-28-thubung-1-thihna-ata-isua-a-thaw/2148534115212822/
+
+[wol.jw.org]
+match = -85.7%%
+title = Mihring Mantu Ni Tûrin I Inpeih Em?
+url = https://wol.jw.org/lus/wol/d/r352/lp-ls/2020560
 
