--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-17 00:14:40
+lastsearch = 2024-07-17 02:16:34
 
 [batdongsan.com.vn]
 match = -233.3%%
@@ -300,4 +300,9 @@ url = https://quyhoach.xaydung.gov.vn/Images/editor/files/UBND-TPVT/TM-LS_compre
 match = -116.7%%
 title = Sheet1
 url = https://www.asc-aqua.org/wp-content/uploads/2022/09/2022_09-CoC-holders-with-scope.xlsx
+
+[diaoc24gio.com]
+match = -133.3%%
+title = Quận 2- khu dân cư D2 Eight ( Capital land)
+url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 
