--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-16 21:13:49
+lastsearch = 2024-07-17 02:15:28
 
 [www.gov.uk]
 match = -200.0%%
@@ -900,4 +900,9 @@ url = https://www.collin.edu/index.html
 match = -60.0%%
 title = City of Reno | Home - Reno.gov
 url = https://www.reno.gov/
+
+[www.gov.ca.gov]
+match = -26.7%%
+title = Governor of California
+url = https://www.gov.ca.gov/
 
