--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,32 +4,32 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-16 23:50:08
+lastsearch = 2024-07-17 02:16:15
 
 [xoptraisan.info]
-match = 26.3%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = 5.3%%
+title = Thảm xốp tranh giao thông 60×60
+url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamaulac.com.vn]
-match = -78.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -31.6%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [thamvinhthuan.com]
-match = 5.3%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = 15.8%%
+title = Thảm Xốp Vân Gỗ 60 x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-van-go-60-x-60-cm/
 
 [thamht.vn]
-match = 42.1%%
-title = Thảm xốp hình sóng 60x60
-url = https://thamht.vn/products/tham-lot-khu-vui-choi-tre-em-xop-hinh-song
+match = 36.8%%
+title = Thảm xốp – THAMHT.VN
+url = https://thamht.vn/collections/tham-xop
 
 [shopee.vn]
-match = -94.7%%
-title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -121.1%%
+title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm xốp/trải sàn
 
 [thamtretho.com]
 match = 37.5%%
