CI images update

--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-16 23:54:58
+lastsearch = 2024-07-17 02:28:40
 
 [chieutruc.info]
 match = -63.6%%
@@ -52,9 +52,9 @@ title = 🌿Chiếu Việt Thái Cao Cấp Chính Hãng🌿 Chiếu Nhựa Việ
 url = https://www.lazada.vn/products/chieu-viet-thai-cao-cap-chinh-hang-chieu-nhua-viet-thai-loai-1-thuong-hieu-uy-tin-size-lon-xep-nho-gon-tien-loi_hcm-i2408709081.html
 
 [shopee.vn]
-match = -9.1%%
-title = Chiếu Cói Thân Vui, Cửa hàng trực tuyến
-url = https://shopee.vn/minhtuan2971993
+match = -13.6%%
+title = chiếu cói giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu cói
 
 [chieu.com.vn]
 match = -18.2%%
