--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-17 02:15:15
+lastsearch = 2024-07-17 02:29:43
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/MC_Ren
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjMKoja&sig=ACfU3U064peDSifcZCIf2ZrCWsXuY75LQA&hl=en&sa=X&ved=2ahUKEwiezovToqyHAxXEGVkFHd_vBi0Q6AF6BAg2EAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjMLmq8&sig=ACfU3U374lGA8YWKlrDEhJLIdCjNdel74g&hl=en&sa=X&ved=2ahUKEwiix_fwpayHAxU9N2IAHeXABCwQ6AF6BAgWEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
