--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-16 21:14:12
+lastsearch = 2024-07-17 02:25:57
 
 [demxanh.com]
 match = 26.1%%
@@ -27,9 +27,9 @@ title = Chăn măng lông KQ loại 7kg
 url = https://thegioidemonline.com/chan-bang-long-loai-7kg.html
 
 [www.youtube.com]
-match = -87.0%%
-title = Nấu Nồi Lẩu Mắm Đầu Năm Nhúng Bắp Chuối Hột Ăn Một ...
-url = https://www.youtube.com/watch?v=_urBtuvQ-kQ
+match = -100.0%%
+title = Bang Chan vibing to cool music while his computer kinda ...
+url = https://www.youtube.com/watch?v=rezmW8IDkRk
 
 [phongkhongkhongquan.vn]
 match = -82.6%%
