--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-17 00:51:16
+lastsearch = 2024-07-17 02:32:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,8 +17,8 @@ title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
 url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
-match = -81.0%%
-title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
+match = 14.3%%
+title = Chiếu Trúc Thái Lan Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
@@ -32,9 +32,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [www.youtube.com]
-match = -157.1%%
-title = Crazy fast Pique turns at the end! 7th year at Vaganova Ballet ...
-url = https://www.youtube.com/watch?v=uBYyyPogiRc
+match = -123.8%%
+title = Lâm Bảo Minh vs Phạm Thái - ROUND 3 | GIẢI POOL 9 BI ...
+url = https://www.youtube.com/watch?v=9TKsBalGcwU
 
 [chieutruc.info]
 match = -71.4%%
@@ -49,7 +49,7 @@ url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap
 [pctravinh.evnspc.vn]
 match = -90.5%%
 title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
-url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000007
+url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
 
 [baoapbac.vn]
 match = -47.6%%
