CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-16 23:35:28
+lastsearch = 2024-07-17 02:48:25
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/South_China_Sea
 [books.google.com]
 match = -104.3%%
 title = The Rough Guide to Vietnam - Page 104 - Google Books Result
-url = https://books.google.com/books?id=JzNGTqatBaIC&pg=PA104&lpg=PA104&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=TdrV5XNbD_&sig=ACfU3U1EezEUh4gkYaMr7DlnIRHx2r_TiA&hl=en&sa=X&ved=2ahUKEwihoeb3_quHAxVQC3kGHTJOCX0Q6AF6BAghEAM
+url = https://books.google.com/books?id=JzNGTqatBaIC&pg=PA104&lpg=PA104&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=TdrV5YP7BW&sig=ACfU3U2t3d0r3XIh2hD6s8VCk3lq5nQRgQ&hl=en&sa=X&ved=2ahUKEwjvifqHqqyHAxX6rokEHe6HBnoQ6AF6BAghEAM
 
 [www.travelweekly.com]
 match = -87.0%%
