--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-16 18:12:20
+lastsearch = 2024-07-17 02:44:01
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,14 +12,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2412015064.html
 
 [www.facebook.com]
-match = -122.2%%
-title = Nem Nướng, Nem Chua Thanh Hóa - giá siêu mềm chỉ 30k
-url = https://www.facebook.com/groups/7408819529141100/posts/-nem-nướng-nem-chua-thanh-hóa-giá-siêu-mềm-chỉ-30k-đừng-để-vị-giác-của-bạn-phải-/8212919362064442/
+match = -83.3%%
+title = Chợ Đông Ba - Nam Cali | Westminster CA
+url = https://www.facebook.com/quanohon/
 
 [thegioinem.com]
-match = 23.5%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -38.9%%
+title = Nệm 2 người nằm giá rẻ tốt nhất 2024
+url = https://thegioinem.com/nem-2-nguoi-nam-gia-re-tot-nhat-2024.html
 
 [garan.vn]
 match = -166.7%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -105.6%%
+title = Dolce Gabbana Light Blue Intense Bargello Kodu
+url = https://www.tiktok.com/discover/dolce-gabbana-light-blue-intense-bargello-kodu
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -150,4 +150,9 @@ url = https://www.bladeforums.com/threads/14cr14movnb.1912177/
 match = -161.1%%
 title = Thả cá tiễn ông Công, ông Táo: Người nhẹ nhàng, người ...
 url = https://vovgiaothong.vn/newsaudio/tha-ca-tien-ong-cong-ong-tao-nguoi-nhe-nhang-nguoi-nem-toet-cho-xong-d31530.html
+
+[vi.wikipedia.org]
+match = -38.9%%
+title = Món cuốn – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Món_cuốn
 
