--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-16 18:15:20
+lastsearch = 2024-07-17 02:45:18
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = 12.0%%
+title = Đệm bông Adaptive Fiber 3M
+url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
 
 [demxanh.com]
 match = -48.0%%
@@ -95,4 +95,9 @@ url = https://thegioidemonline.com/dem-bong-ep-tuan-anh.html
 match = -8.0%%
 title = Đệm Bông Ép Bề Mặt Masage Korea Plus
 url = https://dem24h.vn/dem-bong-ep-be-mat-masage-korea-plus
+
+[www.entershopping.vn]
+match = -20.0%%
+title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
+url = http://www.entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
 
