--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-17 00:45:51
+lastsearch = 2024-07-17 02:49:10
 
 [www.everonqb.com]
-match = -52.2%%
-title = Vỏ gối ôm EPC19055 80x100 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-om-epc19055-80x100.html
+match = -8.7%%
+title = Everon Quảng Bình Vỏ gối ôm EPCOCEAN 80x100
+url = https://www.everonqb.com/vo-goi-om-epcocean-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
@@ -57,9 +57,9 @@ title = Part 3: The limestone islands: West Timor, Savu, Raijua, Sumba
 url = https://magicthreads.wordpress.com/textile-tours-and-research/part-3-the-limestone-islands-west-timor-savu-raijua-sumba/
 
 [twitter.com]
-match = -104.3%%
-title = O. E. A. is Blessed 🙏 on X: "@Omojuwa very correct" / X
-url = https://twitter.com/0Olayemi/status/973229533334786048
+match = -4.3%%
+title = Even okrika don cost. God abeg.
+url = https://twitter.com/rehviie/status/1810694019623932263
 
 [www.quora.com]
 match = -108.7%%
