CI images update

--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-17 00:46:46
+lastsearch = 2024-07-17 03:13:05
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -27,9 +27,9 @@ title = Nghề dệt chiếu lác ở Long An - Di Tích Lịch Sử Võ Công T
 url = https://vocongton.wordpress.com/nghe-det-chieu-lac-o-long-an/
 
 [dangcongsan.vn]
-match = -187.5%%
-title = Trách nhiệm pháp lý khi dừng đỗ trên cao tốc gây tai nạn?
-url = https://dangcongsan.vn/ban-doc/luat-su-cua-ban/trach-nhiem-phap-ly-khi-dung-do-tren-cao-toc-gay-tai-nan-672586.html
+match = -231.2%%
+title = Bảo tồn và phát triển nghề dệt chiếu lác - di sản phi vật thể ...
+url = https://dangcongsan.vn/tu-tuong-van-hoa/bao-ton-va-phat-trien-nghe-det-chieu-lac--di-san-phi-vat-the-quoc-gia-290444.html
 
 [www.baosoctrang.org.vn]
 match = -37.5%%
@@ -92,9 +92,9 @@ title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
 url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [books.google.com]
-match = -187.5%%
-title = 10 Điều Tạo Nên Số Phận - Page 46 - Google Books Result
-url = https://books.google.com/books?id=gnsEEAAAQBAJ&pg=PA46&lpg=PA46&dq=chieu+lac+soc+10&source=bl&ots=2XqgRty2P3&sig=ACfU3U3vpezfI6NfXvj3HbVWFkPkYYeEEg&hl=en&sa=X&ved=2ahUKEwibvrzvjqyHAxVRGDQIHf28BN8Q6AF6BAgiEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=QLDaAAAAMAAJ&pg=RA4-PA7&lpg=RA4-PA7&dq=chieu+lac+soc+10&source=bl&ots=1UvboxlgEl&sig=ACfU3U1A00iunS-URWJ0OTOBUn8WOwImCw&hl=en&sa=X&ved=2ahUKEwjZy_HJr6yHAxXulIkEHQbQDXgQ6AF6BAgjEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
