--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-16 20:46:14
+lastsearch = 2024-07-17 03:16:08
 
 [shopee.vn]
 match = -36.8%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -110.5%%
-title = Chiếu trúc chiếu tre 140cm hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-140cm-hat-nau-den-hang-tot-loai-1/
+match = -168.4%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-140cm/
 
 [chieutrelinhchi.com]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -168.4%%
-title = Mười trên giường | Bài hát cho trẻ em | Vần điệu trẻ | Kids Tv ...
-url = https://www.youtube.com/watch?v=B_XV01P-zOY
+match = -110.5%%
+title = Nhạc thiếu nhi vui nhộn cho bé: Tập thể dục buổi sáng
+url = https://www.youtube.com/watch?v=VcXWebskM88
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -64,7 +64,7 @@ url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-
 [tiki.vn]
 match = -136.8%%
 title = Đồ Chơi Trẻ Em Thông Minh HT SYS - Giúp Tư Duy, Sáng ...
-url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html?spid=275587206
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html?spid=275587203
 
 [khodem.vn]
 match = 31.6%%
