--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-17 02:12:37
+lastsearch = 2024-07-17 03:17:54
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = LOA SADA D209 RGB ĐEN
 url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-den
 
 [batdongsan.com.vn]
-match = -200.0%%
-title = Mua Bán Đất Nền Dự Án đường D2, Quận 9 Giá Rẻ T7/2024
-url = https://batdongsan.com.vn/ban-dat-nen-du-an-duong-d2-61
+match = -140.0%%
+title = Mua Bán Đất đường D2, Quận 9 Giá Rẻ T7/2024
+url = https://batdongsan.com.vn/ban-dat-duong-d2-61
 
 [visaforkorea-vt.com]
 match = -113.3%%
@@ -78,8 +78,8 @@ url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?sta
 
 [www.facebook.com]
 match = 0.0%%
-title = Black Kingdom - D2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=pt_PT
+title = PHOTOTIMEVietnam
+url = https://www.facebook.com/phototimevn/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
