--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-16 23:43:24
+lastsearch = 2024-07-17 03:12:43
 
 [www.galottery.com]
 match = -7.7%%
@@ -347,8 +347,8 @@ title = Directory of Representatives
 url = http://www.house.gov/representatives
 
 [www.mariettaga.gov]
-match = -38.5%%
-title = Marietta Power & Water
+match = -84.6%%
+title = Power & Water | Marietta, GA
 url = https://www.mariettaga.gov/1503/Power-Water
 
 [wickwirewarehouse.com]
@@ -410,4 +410,14 @@ url = https://www.mcdonalds.com/us/en-us.html
 match = -30.8%%
 title = FAFSA® Application
 url = https://studentaid.gov/h/apply-for-aid/fafsa
+
+[uwgathletics.com]
+match = -307.7%%
+title = UWG Wolves | Athletic Programs | Official Athletics Site ...
+url = https://uwgathletics.com/
+
+[www.usda.gov]
+match = -107.7%%
+title = WEEKLY WEATHER AND CROP BULLETIN
+url = https://www.usda.gov/sites/default/files/documents/wwcb.pdf
 
