--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-16 22:46:46
+lastsearch = 2024-07-17 03:18:51
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -92.3%%
-title = Anthony Edwards (basketball)
-url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
+match = -42.9%%
+title = Gallium
+url = https://en.wikipedia.org/wiki/Gallium
 
 [www.facebook.com]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Sylvia Gani
 url = https://www.facebook.com/sylviagani/
 
 [www.youtube.com]
-match = -323.1%%
-title = Our New Friend, Gani (30 mins) l Episode 9 l Tayo the Little Bus
-url = https://www.youtube.com/watch?v=8L7o3sc3crI
+match = -146.2%%
+title = The Gummy Bear Song - Long English Version
+url = https://www.youtube.com/watch?v=astISOttCQ0
 
 [www.regmovies.com]
 match = -215.4%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -84.6%%
-title = George_ahhh - Georgia Ellenwood
-url = https://www.instagram.com/george_ahhh/?hl=en
+match = -15.4%%
+title = Ayu Gani 🐘 (@ganegani)
+url = https://www.instagram.com/ganegani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
