--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-16 17:44:40
+lastsearch = 2024-07-17 03:18:40
 
 [www.tiktok.com]
-match = -111.8%%
-title = HOA fined me for this #hoa | hoa doorbell camera
-url = https://www.tiktok.com/@koltindarley/video/7317753084510342443?lang=en
+match = -170.6%%
+title = We costed our HOA 16%% of their ANNUAL income over a ...
+url = https://www.tiktok.com/@brainofreddit/video/7279632275313069358
 
 [casetext.com]
 match = -100.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC68knNTSD&sig=ACfU3U1KAuxqR3uR5Bn0Od2vC6WYVupktw&hl=en&sa=X&ved=2ahUKEwjXm5_DsKuHAxXI58kDHQvpB10Q6AF6BAgmEAM
+match = -17.6%%
+title = The Bankers Encyclopedia
+url = https://books.google.com/books?id=r4U8Z83fm_cC&pg=PA95&lpg=PA95&dq=man+in+hoa+dep+16&source=bl&ots=GLYLeKOWhR&sig=ACfU3U3EsIR--VTTKSh4LJVDmP9BK-4oZQ&hl=en&sa=X&ved=2ahUKEwjltqzpsKyHAxV3hIkEHZSCA34Q6AF6BAgoEAM
 
 [tax.vermont.gov]
 match = -29.4%%
