CI images update

--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-16 22:48:23
+lastsearch = 2024-07-17 03:32:09
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -47,8 +47,8 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = 0.0%%
-title = Raohe Ẩm Thực Đài
+match = -23.8%%
+title = Raohe Ẩm Thực Đài | Ho Chi Minh City
 url = https://www.facebook.com/RaoheAmThucDai/
 
 [www.tripadvisor.com.vn]
@@ -170,4 +170,9 @@ url = https://www.hcmulaw.edu.vn/card/2024-07-09-0OSNa1Dcoi trực tiếp vtv6.h
 match = -109.5%%
 title = Đài Loan theo dõi sát đợt thử tên lửa mới của Trung Quốc
 url = https://tuoitre.vn/dai-loan-theo-doi-sat-dot-thu-ten-lua-moi-cua-trung-quoc-20240713134043306.htm
+
+[tramincogroup.com.vn]
+match = -66.7%%
+title = Điều kiện xin visa Đài Loan năm 2024 như thế nào?
+url = https://tramincogroup.com.vn/dieu-kien-xin-visa-dai-loan-9350
 
