--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-17 02:45:51
+lastsearch = 2024-07-17 03:36:06
 
 [en.wikipedia.org]
 match = -15.4%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -76.5%%
-title = xikers Members Profile (Updated!)
-url = https://kprofiles.com/xikers-members-profile/
+match = -200.0%%
+title = KQ FELLAZ (KQ Entertainment Official Trainees) (Updated!)
+url = https://kprofiles.com/kq-fellaz-kq-entertainment-official-trainees/
 
 [www.qsc.com]
 match = -188.2%%
