--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-17 02:50:16
+lastsearch = 2024-07-17 03:27:26
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -97,9 +97,9 @@ title = https://www.google.com/maps/@21.0506866,105.804746...
 url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [support.apple.com]
-match = -25.0%%
-title = Hướng dẫn sử dụng iPhone
-url = https://support.apple.com/vi-vn/guide/iphone/welcome/ios
+match = -106.2%%
+title = Chia sẻ kết nối internet của bạn từ iPhone
+url = https://support.apple.com/vi-vn/guide/iphone/iph45447ca6/ios
 
 [au.vtc.vn]
 match = -56.2%%
@@ -380,4 +380,14 @@ url = https://vnexpress.net/phai-lam-sao-de-em-trai-tu-bo-loi-song-ky-di-4769790
 match = -181.2%%
 title = Tổng hợp tin tức về Bắc Giang trên báo chí ngày 16/7/2024
 url = https://atgt.bacgiang.gov.vn/chi-tiet-tin-tuc/-/asset_publisher/9DJTiagaQTlH/content/tong-hop-tin-tuc-ve-bac-giang-tren-bao-chi-ngay-16-7-2024/20181
+
+[ahmedabadcity.gov.in]
+match = -366.7%%
+title = AMC
+url = https://ahmedabadcity.gov.in/
+
+[www.caodangnghelongan.edu.vn]
+match = -43.8%%
+title = Trường Cao Đẳng Nghề Long An
+url = http://www.caodangnghelongan.edu.vn/
 
