--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-16 20:51:54
+lastsearch = 2024-07-17 03:30:05
 
 [www.linkedin.com]
 match = -145.5%%
@@ -67,8 +67,8 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -309.1%%
-title = San Francisco Bay Area Running Race Calendar - 2024
+match = -318.2%%
+title = San Francisco Bay Area Running Race Calendar - 24/25
 url = https://www.runguides.com/san-francisco/runs
 
 [www.kategridley.com]
@@ -370,4 +370,14 @@ url = https://quynhonhotel.com/trung-tam-kham-pha-khoa-hoc-quy-nhon/
 match = 0.0%%
 title = Caodaism
 url = http://en.nhipcautamgiao.net/caodaism/
+
+[www.nguoi-viet.com]
+match = -9.1%%
+title = Nguoi Viet News
+url = https://www.nguoi-viet.com/
+
+[statistik.d-u-v.org]
+match = 0.0%%
+title = Moeller, Jon
+url = https://statistik.d-u-v.org/getresultperson.php?runner=106449
 
