--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-16 22:24:55
+lastsearch = 2024-07-17 03:30:51
 
 [erado.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Giường ngủ da hạng sang mã 14
 url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
 
 [shopee.vn]
-match = -85.0%%
-title = Bộ Ga Gối Trải Giường Poly Cotton M2/M6/M8 Drap ...
-url = https://shopee.vn/Bộ-Ga-Gối-Trải-Giường-Poly-Cotton-M2-M6-M8-Drap-giường-bo-chun-có-kèm-2-vỏ-gối-(Khách-chọn-mẫu-để-lại-ghi-chú-nhé)-i.120217364.2150109535
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [noithatami.com]
 match = -75.0%%
@@ -72,9 +72,9 @@ title = Thảm lông trải giường 1m x 2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm+lông+trải+giường+1m+x+2m
 
 [noithattamviet.net]
-match = -10.0%%
-title = Giường ngủ gỗ công nghiệp GCN-14
-url = https://noithattamviet.net/giuong-ngu-go-cong-nghiep-gcn-14
+match = -30.0%%
+title = Giường bọc nhung gỗ công nghiệp GB-14
+url = https://noithattamviet.net/giuong-boc-nhung-go-cong-nghiep-gb-14
 
 [nemphuoclong.vn]
 match = -55.0%%
