--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-17 00:46:25
+lastsearch = 2024-07-17 03:50:24
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -150.0%%
-title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
-url = https://www.youtube.com/watch?v=6598XYpaW3E
+match = -193.8%%
+title = Một cây Mai Chiếu Thủy đã được chơi 10 năm, vẫn giữ giá ...
+url = https://www.youtube.com/watch?v=nv0EjrLAqh0
 
 [hawater.com.vn]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -206.2%%
-title = Cú đòn như trời giáng của Thành Chương khiến đối thủ nằm ...
-url = https://www.facebook.com/Onsportchannel/videos/cú-đòn-như-trời-giáng-của-thành-chương-khiến-đối-thủ-nằm-sàn-ngay-lập-tức-khi-mớ/1179336393196308/
+match = -168.8%%
+title = Khen Phim - Review phim chiếu rạp | K xem các phần ...
+url = https://www.facebook.com/groups/khenphim/posts/k-xem-các-phần-trước-có-giểu-dc-nội-dung-phim-này-k-mng-mình-xin-rv-phim-có-hay-/1779205792553570/
 
 [suckhoedoisong.vn]
 match = -225.0%%
