--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-17 02:44:47
+lastsearch = 2024-07-17 03:51:42
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -153.3%%
+title = Cruise Calendar 2024 / 2025 | Marella Cruises
+url = https://www.tui.co.uk/cruise/cruise-calendar/
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -202,8 +202,8 @@ title = TUI launches direct flight to Singapore
 url = https://www.sellingtravel.co.uk/tui-launches-direct-flight-to-singapore/
 
 [www.birminghamairport.co.uk]
-match = 0.0%%
-title = 
+match = -140.0%%
+title = TUI FIRST PASSENGER FLIGHT TO SINGAPORE TAKES ...
 url = https://www.birminghamairport.co.uk/media-information/news/2023/12/tui-first-passenger-flight-to-singapore-takes-off-from-birmingham-airport/
 
 [www.singaporeair.com]
