CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-17 03:52:39
+lastsearch = 2024-07-17 04:28:09
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -440,4 +440,9 @@ url = https://www.wbtv.com/2023/09/27/hoa-asks-man-take-down-pride-flag-union-co
 match = -105.9%%
 title = The Key Florida HOA Board Member Requirements
 url = https://www.fsresidential.com/florida/news-events/articles/florida-board-member-requirements/
+
+[www.sun-sentinel.com]
+match = -170.6%%
+title = Condo Wars: After HOA corruption arrests, Florida's ...
+url = https://www.sun-sentinel.com/2023/10/18/condo-wars-after-hoa-corruption-arrests-floridas-community-management-industry-works-to-weaken-reform-bills/
 
