--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-17 03:17:34
+lastsearch = 2024-07-17 04:30:44
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -72,8 +72,8 @@ title = Giường
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [vn.my-best.com]
-match = -113.6%%
-title = [2024] Top 11 Giường Ngủ Hiện Đại tốt nhất hiện nay [Tư ...
+match = -54.5%%
+title = [2024] Top 11 Giường Ngủ Hiện Đại tốt nhất ...
 url = https://vn.my-best.com/37801
 
 [nemgiakho.com]
