--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-17 00:37:35
+lastsearch = 2024-07-17 04:30:53
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC22 066
-url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
+title = Bộ sản phẩm SH_BC22 058
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-058
 
 [everon.online]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-22034 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est22034.html
+title = Everon EPC-22045 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epc22045.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -72,9 +72,9 @@ title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
 url = https://songhong.info/chan-ga-goi-khong-chan-bc62
 
 [kona.com.vn]
-match = 58.8%%
-title = Bộ ga chần chăn 4 mùa MOC 2 - kona
-url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-moc-2
+match = 41.2%%
+title = Bộ ga chần chăn 4 mùa Diamond 188 - kona
+url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-diamond-188
 
 [www.everonvni.vn]
 match = 23.5%%
