--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-17 00:48:27
+lastsearch = 2024-07-17 04:29:48
 
 [www.youtube.com]
 match = -48.0%%
@@ -12,9 +12,9 @@ title = Đài Loan Tung Chiêu Bóp Nghẹt Dã Tâm Của Trung Quốc
 url = https://www.youtube.com/watch?v=0--4nk6XRjE
 
 [www.voatiengviet.com]
-match = -92.0%%
-title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đường ...
-url = https://www.voatiengviet.com/a/7026996.html
+match = -72.0%%
+title = Trung Quốc kết thúc tập trận, Đài Loan lên án 'khiêu khích ...
+url = https://www.voatiengviet.com/a/trung-quoc-ket-thuc-tap-tran-dai-loan-khieu-khich-trang-tron/7626824.html
 
 [daithuy.com]
 match = -92.0%%
