--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-17 00:12:38
+lastsearch = 2024-07-17 04:35:24
 
 [shopee.vn]
 match = -90.5%%
@@ -107,9 +107,9 @@ title = Tấm lót chống thấm trải giường 2 lớp Baby Unmei - Ngẫu N
 url = https://unmei.com.vn/san-pham/tam-lot-chong-tham-trai-giuong-2-lop-baby-unmei-58x72cm-1-cai-bich-tam-lot-chong-tham-cho-be-hong-ngau-nhien/
 
 [noithattamviet.net]
-match = -85.7%%
-title = Những Mẫu Giường Ngủ 2m x 2m2 Đẹp, Ấn Tượng Dành ...
-url = https://noithattamviet.net/cam-nang/nhung-mau-giuong-ngu-2m-x-2m2-dep-an-tuong-danh-cho-phong-ngu-rong
+match = -81.0%%
+title = Tổng Hợp Các Mẫu Giường Quân Đội Bền Đẹp Nhất Hiện ...
+url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-dep-nhat-hien-nay
 
 [zenhomes.vn]
 match = -95.2%%
