--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-16 21:36:41
+lastsearch = 2024-07-17 04:28:53
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -28.6%%
-title = Jim Wells, PhD
-url = https://profiles.ucsf.edu/james.wells
+match = -35.0%%
+title = Jennifer Puck, MD - UCSF Profiles
+url = https://profiles.ucsf.edu/jennifer.puck
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -113,8 +113,8 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 
 [cases.stretto.com]
 match = -90.0%%
-title = Case 23-10988 Doc 1 Filed 07/26/23 Page 1 of 260
-url = https://cases.stretto.com/public/x267/12380/PLEADINGS/1238007262380000000051.pdf
+title = Case 23-10990 Doc 1 Filed 07/26/23 Page 1 of 260
+url = https://cases.stretto.com/public/x267/12381/PLEADINGS/1238107262380000000053.pdf
 
 [www.west-cs.com]
 match = -100.0%%
@@ -212,9 +212,9 @@ title = Table of contents
 url = https://ieeexplore.ieee.org/iel7/6648471/6658393/06658395.pdf
 
 [medschool.uci.edu]
-match = -30.8%%
-title = Alpesh N Amin
-url = https://medschool.uci.edu/about/faculty/anamin
+match = -38.5%%
+title = Jaime Landman
+url = https://medschool.uci.edu/about/faculty/landmanj
 
 [floridapsc.com]
 match = -137.5%%
