CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-16 17:36:54
+lastsearch = 2024-07-17 04:46:52
 
 [scholar.google.com]
 match = -43.8%%
@@ -118,8 +118,8 @@ url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
 match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabyV7lxg&sig=ACfU3U3h_RcSp_o7WyLkEPWizdUpM3j2-w&hl=en&sa=X&ved=2ahUKEwiB9qn7vKqHAxWvhYkEHQHLDHwQ6AF6BAgaEAM
+title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6RVeBRh&sig=ACfU3U3VXWQTAG93sOC0s8x2MOT10S7xwQ&hl=en&sa=X&ved=2ahUKEwjbn4LFxKyHAxWPE1kFHWv7BC0Q6AF6BAgfEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
