--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-07-17 04:35:14
+lastsearch = 2024-07-17 04:48:30
 
 [everonvn.com.vn]
 match = 4.8%%
@@ -37,8 +37,8 @@ title = Best Seedbank to order from in US? | Page 9
 url = https://www.rollitup.org/t/best-seedbank-to-order-from-in-us.908367/page-9
 
 [www.reddit.com]
-match = -9.5%%
-title = Sunday Swaps: Destash Listings
+match = -119.0%%
+title = Sunday Swaps: Destash Listings : r/Indiemakeupandmore
 url = https://www.reddit.com/r/Indiemakeupandmore/comments/t7y96v/sunday_swaps_destash_listings/
 
 [lovepotion.invisionzone.com]
@@ -55,4 +55,9 @@ url = https://www.reef2reef.com/threads/whats-not-to-love-about-gonipora-its-col
 match = -66.7%%
 title = SOLD! Sovtek Big Muff Pi Version 7 Big box
 url = https://archive.ehx.com/forums/viewreply/22975/
+
+[www.birdforum.net]
+match = -71.4%%
+title = Revisiting the classic porro - Binoculars
+url = https://www.birdforum.net/threads/revisiting-the-classic-porro.219179/
 
