--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-17 02:26:51
+lastsearch = 2024-07-17 04:49:35
 
 [demxanh.com]
 match = -3.3%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
 url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
-match = 10.0%%
-title = Có nên sử dụng chiếu điều hòa cho bé không?
-url = https://goni.vn/co-nen-su-dung-chieu-dieu-hoa-cho-be-khong/
+match = 26.7%%
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
+url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [tiki.vn]
 match = 40.0%%
