--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-07-16 16:34:30
+lastsearch = 2024-07-17 04:44:38
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -17,9 +17,9 @@ title = Nệm Everon Ceramic
 url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
-match = -105.0%%
-title = Đệm bông ép Everon Chính Hãng Hàn Quốc Giảm Giá ...
-url = https://everonvn.com.vn/everon/785/dem-bong-ep-everon-giam-gia
+match = 20.0%%
+title = Bảng Giá Đệm Everon Năm 2024
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
@@ -77,9 +77,9 @@ title = Đệm Bông Ép Everon
 url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 
 [everon.com]
-match = -115.0%%
-title = Top 7 loại nệm bông ép gấp 3 giá rẻ chính hãng ...
-url = https://everon.com/top-7-loai-nem-bong-ep-gap-3-gia-re-chinh-hang-everon-moi-nhat-2022
+match = -40.0%%
+title = Bảng giá đệm bông ép Everon 180 (1.8m) x 200
+url = https://everon.com/tin-san-pham/dem-bong-ep-everon-180x200-n227.html
 
 [khodem.vn]
 match = -130.0%%
