--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-17 04:14:07
+lastsearch = 2024-07-17 04:46:41
 
 [m.youtube.com]
 match = -144.4%%
@@ -22,9 +22,9 @@ title = Nem Xuyên Bang (@nemxuyenbang)
 url = https://www.instagram.com/nemxuyenbang/?hl=en
 
 [www.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -105.6%%
+title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
+url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
 match = -155.6%%
