--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-17 04:52:42
+lastsearch = 2024-07-17 05:37:10
 
 [www.gov.uk]
 match = -200.0%%
@@ -227,9 +227,9 @@ title = Register Home Page
 url = https://register.fca.org.uk/s/
 
 [loigiaihay.com]
-match = -146.7%%
-title = Giải Getting Started Unit 2 SGK Tiếng Anh 9 mới
-url = https://loigiaihay.com/getting-started-unit-2-trang-16-sgk-tieng-anh-9-moi-c141a22563.html
+match = -173.3%%
+title = Giải Language focus - Unit 1 trang 16 SGK Tiếng Anh 8
+url = https://loigiaihay.com/language-focus-unit-1-trang-16-sgk-tieng-anh-8-c75a18692.html
 
 [www.forkunion.com]
 match = -106.7%%
@@ -654,7 +654,7 @@ url = https://www.liverpoolfc.com/
 [www.bernzomatic.com]
 match = -166.7%%
 title = Để học tốt Tiếng Anh 6Giải toán lớp 6 tập 1 trang 16
-url = https://www.bernzomatic.com/app8789085
+url = https://www.bernzomatic.com/appwwcBy/53637.csv
 
 [www.imdb.com]
 match = -86.7%%
