--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-17 02:50:07
+lastsearch = 2024-07-17 05:35:39
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -78.6%%
-title = Green Screen with other Shorts! 🟩🤳
-url = https://www.youtube.com/watch?v=Q8IeXTDZ734
+match = -200.0%%
+title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
+url = https://www.youtube.com/watch?v=7yEnuxJqQKg
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -114.3%%
-title = About the EB-5 Visa Classification
-url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
+match = -50.0%%
+title = Explore my Options | USCIS
+url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
 match = -21.4%%
