--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-17 04:47:25
+lastsearch = 2024-07-17 05:37:53
 
 [tiki.vn]
 match = -138.9%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -183.3%%
-title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
+match = -188.9%%
+title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -105.6%%
-title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
-url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
+match = -150.0%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 739 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-739-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Common C119 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c119
+match = -66.7%%
+title = Bộ ga phủ Passion A112 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a112
 
 [aeoneshop.com]
 match = -105.6%%
