--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-17 04:46:52
+lastsearch = 2024-07-17 05:39:41
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6RVeBRh&sig=ACfU3U3VXWQTAG93sOC0s8x2MOT10S7xwQ&hl=en&sa=X&ved=2ahUKEwjbn4LFxKyHAxWPE1kFHWv7BC0Q6AF6BAgfEAM
+match = -87.5%%
+title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENPUX64Zw&sig=ACfU3U0y2pwYdsbXAU9U7687Av6RViC0rg&hl=en&sa=X&ved=2ahUKEwjChPyr0KyHAxVjhIkEHeKODXwQ6AF6BAgjEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
