--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-17 02:50:36
+lastsearch = 2024-07-17 05:39:21
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -47,9 +47,9 @@ title = Chiếu trúc quế lâm loại 1 16 20
 url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 
 [www.facebook.com]
-match = -31.6%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 6.5%%
+title = Chiếu Tre Lan Lan | Updates, Reviews, Prices
+url = https://www.facebook.com/chieutruclanlan/?locale=vi_VN
 
 [www.dienmayxanh.com]
 match = -29.0%%
