--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-17 05:12:47
+lastsearch = 2024-07-17 05:34:03
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmgib6jY&sig=ACfU3U08q1oKPuBPq44sDsfsg6okzfc2MQ&hl=en&sa=X&ved=2ahUKEwjgyNSqyqyHAxU0LTQIHZu8ACYQ6AF6BAgsEAM
+match = -17.6%%
+title = The Bankers Encyclopedia
+url = https://books.google.com/books?id=r4U8Z83fm_cC&pg=PA95&lpg=PA95&dq=man+in+hoa+dep+16&source=bl&ots=GLYLeKWXjU&sig=ACfU3U347vqVXTqc5l7W7u-ti2-9ze6gfg&hl=en&sa=X&ved=2ahUKEwin5N-Kz6yHAxXEv4kEHVTCAX4Q6AF6BAgnEAM
 
 [tax.vermont.gov]
 match = -29.4%%
