--- a/images/ruot-nem-korea-150x190x09/config.ini
+++ b/images/ruot-nem-korea-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 lastopen = 2024-06-11 23:30:16
 
 [search]
-lastsearch = 2024-07-17 04:45:22
+lastsearch = 2024-07-17 05:38:38
 
 [www.riotgames.com]
-match = -84.0%%
-title = Seoul, Korea - Riot Games Global Offices & Job Openings
-url = https://www.riotgames.com/en/work-with-us/offices/seoul
+match = 0.0%%
+title = 
+url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
 
 [en.wikipedia.org]
 match = 0.0%%
