--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-17 05:20:33
+lastsearch = 2024-07-17 05:33:51
 
 [suongtuyet.com]
 match = 16.0%%
@@ -42,9 +42,9 @@ title = [Cập nhật] Bảng giá đệm Tuấn Anh mới nhất 2021
 url = https://changagoidemsonghong.online/cap-nhat-bang-gia-dem-tuan-anh-moi-nhat-2020.html
 
 [dem24h.vn]
-match = -8.0%%
-title = Đệm Bông Ép Bề Mặt Masage Korea Plus
-url = https://dem24h.vn/dem-bong-ep-be-mat-masage-korea-plus
+match = 12.0%%
+title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
+url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 
 [demviethome.vn]
 match = -4.0%%
