CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-17 03:51:31
+lastsearch = 2024-07-17 05:43:55
 
 [zhangbrickshop.com]
 match = -133.3
@@ -167,9 +167,9 @@ title = Báo sự cố
 url = https://capnuoctrungan.vn/Main/BaoSuCo/Create
 
 [www.instagram.com]
-match = -50.0%%
-title = Open app
-url = https://www.instagram.com/p/C0bphYSiGbB/
+match = -133.3%%
+title = CLAY - Cocktails & Cuisine (@clay_saigon)
+url = https://www.instagram.com/clay_saigon/?locale=找人做个罗马尼亚焊工資格證書联系{威信+TG/飞机:@buth2788}6TkHs??????ѧ??ƾ8c6a4
 
 [www.tiktok.com]
 match = -246.7%%
@@ -345,4 +345,9 @@ url = https://tuyensinh247.com/bai-tap-87566.html
 match = -213.3%%
 title = Kiwooza Planet D2 (Thiso Mall Thu Thiem) - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g293925-d26856619-Reviews-Kiwooza_Planet_D2_Thiso_Mall_Thu_Thiem-Ho_Chi_Minh_City.html
+
+[vpcqcsdt.bocongan.gov.vn]
+match = -40.0%%
+title = Tra cứu đối tượng truy nã
+url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
 
