--- a/images/nem-dreamland-uc-200x200x09/config.ini
+++ b/images/nem-dreamland-uc-200x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-200x200x09.html
 lastopen = 2024-06-07 01:35:16
 
 [search]
-lastsearch = 2024-07-17 00:17:16
+lastsearch = 2024-07-17 05:48:22
 
 [www.diepxuan.com]
 match = 55.6%%
@@ -55,4 +55,14 @@ url = https://www.audiocircle.com/index.php?topic=187750.20
 match = -96.3%%
 title = X-Plane 11 | Magknight 787-9 v1.1 | The 787-9 Down Under ...
 url = https://m.youtube.com/watch?v=6Usm_fhKZiI
+
+[www.reddit.com]
+match = -11.1%%
+title = Problem ECN2 development : r/Darkroom
+url = https://www.reddit.com/r/Darkroom/comments/105zc5o/problem_ecn2_development/
+
+[www.ephotozine.com]
+match = 11.5%%
+title = At the market by mlseawell
+url = https://www.ephotozine.com/photo/at-the-market-69385925
 
