--- a/images/nem-everon-180x200x09-goodsleep/config.ini
+++ b/images/nem-everon-180x200x09-goodsleep/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x09-goodsleep.html
 lastopen = 2024-06-06 17:10:33
 
 [search]
-lastsearch = 2024-07-17 03:49:20
+lastsearch = 2024-07-17 05:49:48
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-good-sleep.html
 [www.amazon.com]
 match = -6.5%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B00EM9RHB0/1/ref=ask_ql_psf_ql_hza?sort=SUBMIT_DATE
+url = https://www.amazon.com/ask/questions/Tx12VOTDNSS4T31/?
 
 [www.dropzone.com]
 match = -54.8%%
@@ -35,4 +35,9 @@ url = https://auntay.com/category/footwear/
 match = -38.7%%
 title = Extreme Light Gear List... Try to make even lighter!
 url = https://backpackinglight.com/forums/topic/656/page/2/
+
+[www.fountainpennetwork.com]
+match = -22.6%%
+title = Most beautiful Edison materials - Page 2 - USA
+url = https://www.fountainpennetwork.com/forum/topic/359163-most-beautiful-edison-materials/page/2/
 
