--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-17 05:39:52
+lastsearch = 2024-07-17 05:44:18
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -22,9 +22,9 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = 0.0%%
-title = Ruột gối Korea | Shopee Việt Nam
-url = https://shopee.vn/Ruột-gối-Korea-i.33372594.2602291227
+match = 64.7%%
+title = Ruột gối ép hơi Korea
+url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
 
 [demxanh.com]
 match = -100.0%%
