--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-17 03:31:14
+lastsearch = 2024-07-17 05:48:02
 
 [thamaulac.com.vn]
-match = -38.9%%
-title = Thảm xốp ghép vân gỗ 60x60 cm màu sáng
-url = https://thamaulac.com.vn/san-pham/tham-xop-ghep-van-go-60x60-cm-mau-sang
+match = -88.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
-match = -11.1%%
-title = Thảm xốp tranh giao thông 60×60
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 22.2%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamvinhthuan.com]
 match = 16.7%%
@@ -32,9 +32,9 @@ title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
-match = -55.6%%
-title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
+match = -27.8%%
+title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
+url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
 
 [thamtuonglam.vn]
 match = 21.4%%
