--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-17 04:29:03
+lastsearch = 2024-07-17 06:12:55
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -390,4 +390,9 @@ url = https://ahmedabadcity.gov.in/
 match = -43.8%%
 title = Trường Cao Đẳng Nghề Long An
 url = http://www.caodangnghelongan.edu.vn/
+
+[vn.dalailama.com]
+match = 0.0%%
+title = Ra đời đến lưu vong
+url = https://vn.dalailama.com/the-dalai-lama/biography-and-daily-life/birth-to-exile
 
