--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-17 05:48:32
+lastsearch = 2024-07-17 06:19:12
 
 [shopee.vn]
 match = 0.0%%
@@ -12,14 +12,14 @@ title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
 
 [www.lazada.vn]
-match = -22.2%%
-title = Chăn Nhung 4kg Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-nhung-4kg/
+match = 7.4%%
+title = Mền Lông Tuyết Thái Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/men-long-tuyet-thai/
 
 [tiki.vn]
-match = -18.5%%
-title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -47,9 +47,9 @@ title = Chăn Lông Cừu Tuyết YUKI Siêu Ấm Nặng 4kg Chính ...
 url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-hang-men-yuki-day-min-kich-thuoc-2mx2m3-hang-xuat-nhat-gia-ib-a-2129967.html
 
 [www.youtube.com]
-match = -66.7%%
-title = Bác sĩ Trương Hữu Khanh: Bạch hầu không lây tràn lan như ...
-url = https://www.youtube.com/watch?v=cDiiOIrYOVk
+match = -74.1%%
+title = Cựu Thủ tướng Thái Lan Thaksin được trả tự do - Tin thế giới ...
+url = https://www.youtube.com/watch?v=zGtjB2l6au4
 
 [www.diepxuan.com]
 match = 22.2%%
