--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-17 02:24:37
+lastsearch = 2024-07-17 06:21:02
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -147.4%%
+title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
+url = https://www.youtube.com/watch?v=ASsdVo0WBew
 
 [kallos.co]
 match = -105.3%%
@@ -74,7 +74,7 @@ url = https://xlinhho.hagiang.gov.vn/-/nhung-doanh-nghiep-dua-cay-che-bac-quang-
 [metruyencv.com]
 match = -136.8%%
 title = Trọng Sinh 2000, Thanh Mai Giáo Hoa 18 Tuổi - Chương ...
-url = https://metruyencv.com/truyen/trong-sinh-2000-thanh-mai-giao-hoa-18-tuoi/chuong-505
+url = https://metruyencv.com/truyen/trong-sinh-2000-thanh-mai-giao-hoa-18-tuoi/chuong-594
 
 [vneconomy.vn]
 match = -157.9%%
