--- a/images/nem-everon-200x232x9/config.ini
+++ b/images/nem-everon-200x232x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-200x232x9.html
 lastopen = 2024-06-06 17:10:18
 
 [search]
-lastsearch = 2024-07-17 01:51:06
+lastsearch = 2024-07-17 06:16:14
 
 [forum.cartridgecollectors.org]
 match = -125.0%%
@@ -45,4 +45,9 @@ url = https://www.gunboards.com/threads/novosibirsk-lve-sport-92-gr-fmj-chrony-t
 match = 0.0%%
 title = Stone for All Seasons?
 url = https://www.kitchenknifeforums.com/threads/stone-for-all-seasons.26506/
+
+[forums.radioreference.com]
+match = -10.0%%
+title = Catching a Jammer on 2m
+url = https://forums.radioreference.com/threads/catching-a-jammer-on-2m.341410/
 
