--- a/images/tui-warmdream-160x200x09/config.ini
+++ b/images/tui-warmdream-160x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-160x200x09.html
 lastopen = 2024-06-17 10:41:37
 
 [search]
-lastsearch = 2024-07-17 03:48:55
+lastsearch = 2024-07-17 06:13:06
 
 [www.diepxuan.com]
-match = -16.7%%
-title = Túi Warmdream 160x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-160x200x09.html
+match = 10.5%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [community.goodsam.com]
 match = -62.5%%
